--- a/FrontEnd/src/app/registration/listusers.component.html
+++ b/FrontEnd/src/app/registration/listusers.component.html
@@ -3,30 +3,18 @@
     <table class="table">
         <thead>
             <tr>
-                <th scope="col">#</th>
-                <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th>
+                <th scope="col">Name</th>
+                <th scope="col">Address</th>
+                <th scope="col">Phone</th>
+                <th scope="col">Username</th>
             </tr>
         </thead>
-        <tbody>
+        <tbody *ngFor="let user of users">
             <tr>
-                <th scope="row">1</th>
-                <td>Mark</td>
-                <td>Otto</td>
-                <td>@mdo</td>
-            </tr>
-            <tr>
-                <th scope="row">2</th>
-                <td>Jacob</td>
-                <td>Thornton</td>
-                <td>@fat</td>
-            </tr>
-            <tr>
-                <th scope="row">3</th>
-                <td>Larry</td>
-                <td>the Bird</td>
-                <td>@twitter</td>
+                <td scope="row">{{user.name}}</td>
+                <td>{{user.address}}</td>
+                <td>{{user.phone}}</td>
+                <td>{{user.username}}</td>
             </tr>
         </tbody>
     </table>
