--- a/FrontEnd/src/app/registration/registration.component.html
+++ b/FrontEnd/src/app/registration/registration.component.html
@@ -1,21 +1,54 @@
 <div class="container">
+
     <form>
         <div class="form-group">
             <label for="Full name">Full Name</label>
-            <input type="Full name" class="form-control" name="fullName" [(ngModel)]="fullName" aria-describedby="emailHelp" placeholder="Enter Full Name">
+            <input type="text" class="form-control" name="name" #name="ngModel" [(ngModel)]="user.name"
+                aria-describedby="emailHelp" placeholder="Enter Full Name">
 
         </div>
 
         <div class="form-group">
             <label for="exampleInputEmail1">Email address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter email" name="email" [(ngModel)]="email">
-            <small id="emailHelp" class="form-text text-muted">We'll never share your email with anyone else.</small>
+                placeholder="Enter address" name="email" #email="ngModel" [(ngModel)]="user.email">
+
+        </div>
+        <div class="form-group">
+            <label for="InputAddress">Address</label>
+            <input type="text" class="form-control" placeholder="Enter address" name="address" #address="ngModel"
+                [(ngModel)]="user.address">
+
+        </div>
+        <div class="form-group">
+            <label for="exampleInputUsername">username</label>
+            <input type="text" class="form-control" placeholder="Enter usename" name="username" #username="ngModel"
+                [(ngModel)]="user.username">
         </div>
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
-            <input type="password" class="form-control" name="password" id="exampleInputPassword1" [(ngModel)]="password" placeholder="Password">
+            <input type="password" class="form-control" name="password" #password="ngModel" id="exampleInputPassword1"
+                [(ngModel)]="user.password" placeholder="Password">
         </div>
+        <div class="form-group">
+            <label>confirmPassword</label>
+            <input type="password" class="form-control" id="exampleInputPassword" placeholder="confirm password"
+                name="confirmPassword" #confirmPassword="ngModel" [(ngModel)]="user.confirmPassword">
+
+        </div>
+        <div class="form-group">
+            <label for="role">Role</label>
+            <input type="text" class="form-control" placeholder="Enter role" name="role" #role="ngModel"
+                [(ngModel)]="user.role">
+
+        </div>
+        <div class="form-group">
+            <label for="phone">Phone</label>
+            <input type="text" class="form-control" placeholder="Enter phone" name="phone" #phone="ngModel"
+                [(ngModel)]="user.phone">
+
+        </div>
+
         <div class="form-check">
             <input type="checkbox" class="form-check-input" id="exampleCheck1">
             <label class="form-check-label" for="exampleCheck1">Check me out</label>
