--- a/FrontEnd/src/app/registration/registration.component.html
+++ b/FrontEnd/src/app/registration/registration.component.html
@@ -1,58 +1,67 @@
+
+<br>
 <div class="container">
-
+        <div *ngIf="showForm">
+                <div  *ngIf="submitedStatus == 'success'" class="alert alert-success" role="alert">
+                        {{message}}
+                </div> 
+                <div  *ngIf="submitedStatus == 'failure'"  class="alert alert-danger" role="alert">
+                        {{message}}
+                </div>           
+            </div>
     <form>
-        <div class="form-group">
+        <div class="form-group">             
             <label for="Full name">Full Name</label>
-            <input type="text" class="form-control" name="name" #name="ngModel" [(ngModel)]="user.name"
+            <input type="text" class="form-control" name="name"  #name="ngModel" [(ngModel)]="user.name"
                 aria-describedby="emailHelp" placeholder="Enter Full Name">
-
         </div>
 
         <div class="form-group">
-            <label for="exampleInputEmail1">Email address</label>
+            <label for="InputAddress">Email Address</label>
             <input type="email" class="form-control" id="exampleInputEmail1" aria-describedby="emailHelp"
-                placeholder="Enter address" name="email" #email="ngModel" [(ngModel)]="user.email">
-
+                placeholder="Enter address" name="email"   #email="ngModel" [(ngModel)]="user.email">
         </div>
+
         <div class="form-group">
-            <label for="InputAddress">Address</label>
-            <input type="text" class="form-control" placeholder="Enter address" name="address" #address="ngModel"
-                [(ngModel)]="user.address">
-
+                <label for="InputAddress">Address</label>
+                <input type="text" class="form-control" placeholder="Enter address" name="address" #address="ngModel"
+                    [(ngModel)]="user.address"> 
         </div>
+
         <div class="form-group">
             <label for="exampleInputUsername">username</label>
-            <input type="text" class="form-control" placeholder="Enter usename" name="username" #username="ngModel"
+            <input type="text" class="form-control" placeholder="Enter username" name="username" #username="ngModel"
                 [(ngModel)]="user.username">
         </div>
+
         <div class="form-group">
             <label for="exampleInputPassword1">Password</label>
             <input type="password" class="form-control" name="password" #password="ngModel" id="exampleInputPassword1"
                 [(ngModel)]="user.password" placeholder="Password">
         </div>
+
         <div class="form-group">
             <label>confirmPassword</label>
             <input type="password" class="form-control" id="exampleInputPassword" placeholder="confirm password"
                 name="confirmPassword" #confirmPassword="ngModel" [(ngModel)]="user.confirmPassword">
-
         </div>
+
         <div class="form-group">
-            <label for="role">Role</label>
-            <input type="text" class="form-control" placeholder="Enter role" name="role" #role="ngModel"
-                [(ngModel)]="user.role">
-
+          <label>Role</label>
+          <br>
+                <select class="browser-default custom-select" name="role" #role="ngModel" [(ngModel)]="user.role">
+                        <option selected>Choose your role</option>
+                        <option value="EMPLOYEE">EMPLOYEE</option>
+                        <option value="ADMIN">ADMIN</option> 
+                </select>
         </div>
+
         <div class="form-group">
             <label for="phone">Phone</label>
             <input type="text" class="form-control" placeholder="Enter phone" name="phone" #phone="ngModel"
                 [(ngModel)]="user.phone">
-
         </div>
-
-        <div class="form-check">
-            <input type="checkbox" class="form-check-input" id="exampleCheck1">
-            <label class="form-check-label" for="exampleCheck1">Check me out</label>
-        </div>
+         
         <button type="submit" (click)="submit()" class="btn btn-primary">Submit</button>
     </form>
 </div>
